--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="23dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/btnylw"
-        android:text="Show all alarms"
+        android:text="Show recent alarm"
         android:textAllCaps="false"
         android:textColor="#FFF"
         android:textSize="20sp"
